Update summernote w/ npm auto-update
Replace auto update method to npm from git

--- a/ajax/libs/summernote/package.json
+++ b/ajax/libs/summernote/package.json
@@ -2,8 +2,8 @@
   "name": "summernote",
   "filename": "summernote.min.js",
   "version": "0.8.17",
-  "description": "Super Simple WYSIWYG Editor on Bootstrap",
-  "homepage": "http://summernote.org",
+  "description": "Super Simple WYSIWYG Editor",
+  "homepage": "https://summernote.org",
   "keywords": [
     "bootstrap",
     "summernote",
